<resources>
    <string name="app_name">Конвертер Валют</string>

    <string name="currency_from_text">Из</string>
    <string name="currency_to_text">В</string>

    <string name="currency_option_ruble_text">Рубль</string>
    <string name="currency_option_dollar_text">Доллар</string>
    <string name="currency_option_euro_text">Евро</string>
    <string name="currency_option_yen_text">Йен</string>

    <string name="currency_to_convert_text">Деньги для перевода</string>
    <string name="currency_to_convert_button_text">Перевести</string>

    <string name="currency_result_text">Количество: %s</string>
    <string name="currency_round_up_text">Округлить</string>

    <string name="error_message_text">ОШИБКА: Выбраны 2 одинаковых дубликата: перевод из %1$s в %2$s невозможен</string>
</resources>